Fix smooth-scroll and snap-align

--- a/src/components/Portfolio/Portfolio.styles.scss
+++ b/src/components/Portfolio/Portfolio.styles.scss
@@ -29,6 +29,12 @@
     } 
   }
 
+  section {
+    .snap-start {
+      scroll-snap-align: start;
+    }
+  }
+
   .overlay-blur {
     position: fixed;
     top: 0;
